--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:09:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:09:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-18</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Corey Conners -2
@@ -159,7 +159,7 @@ Missed Cut</td>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler(W) -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith -6
 E thru 6</td>
       <td>Will Zalatoris E
@@ -175,7 +175,7 @@ Missed Cut</td>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Corey Conners -2
@@ -191,7 +191,7 @@ Missed Cut</td>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Justin Thomas(W) -3
 -2 thru 7</td>
       <td>Corey Conners -2
@@ -207,7 +207,7 @@ Missed Cut</td>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith -6
 E thru 6</td>
       <td>Corey Conners -2
@@ -223,7 +223,7 @@ Missed Cut</td>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-15</td>
       <td>Scottie Scheffler(W) -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Rory McIlroy -4
 -5 thru 10</td>
       <td>Corey Conners -2
@@ -239,7 +239,7 @@ Missed Cut</td>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Justin Thomas(W) -3
 -2 thru 7</td>
       <td>Shane Lowry -1
@@ -255,7 +255,7 @@ Missed Cut</td>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith -6
 E thru 6</td>
       <td>Corey Conners -2
@@ -271,7 +271,7 @@ Missed Cut</td>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Rory McIlroy -4
 -5 thru 10</td>
       <td>Justin Thomas(W) -3
@@ -287,7 +287,7 @@ Missed Cut</td>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Shane Lowry -1
@@ -319,7 +319,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Corey Conners -2
 -1 thru 8</td>
       <td>Will Zalatoris E
@@ -345,22 +345,6 @@ E thru 6</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -6
-E thru 6</td>
-      <td>Corey Conners -2
--1 thru 8</td>
-      <td>Dustin Johnson(W) -1
--2 thru 10</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -399,7 +383,7 @@ Missed Cut</td>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Corey Conners -2
 -1 thru 8</td>
       <td>Will Zalatoris E
@@ -460,10 +444,26 @@ E thru 12</td>
 -3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+E thru 6</td>
+      <td>Corey Conners -2
+-1 thru 8</td>
+      <td>Shane Lowry -1
++1 thru 7</td>
+      <td>Dustin Johnson(W) +2
++1 thru 11</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Matthew Fitzpatrick +2
@@ -479,7 +479,7 @@ Missed Cut</td>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Rory McIlroy -4
 -5 thru 10</td>
       <td>Jon Rahm(W) +4
@@ -575,7 +575,7 @@ Missed Cut</td>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Corey Conners -2
 -1 thru 8</td>
       <td>Viktor Hovland +4
@@ -623,7 +623,7 @@ Missed Cut</td>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Cameron Smith -6
 E thru 6</td>
       <td>Patrick Cantlay +7
@@ -663,22 +663,6 @@ E thru 6</td>
       <td>Viktor Hovland +4
 +1 thru 12</td>
       <td class="greyout leftborder">Bubba Watson +7
--1 (F)</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">3</td>
-      <td>Rory McIlroy(W) -4
--5 thru 10</td>
-      <td>Dustin Johnson -1
--2 thru 10</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -748,18 +732,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">6</td>
-      <td>Dustin Johnson(W) -1
--2 thru 10</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
-      <td>Matthew Fitzpatrick +2
--2 (F)</td>
-      <td>Tony Finau +6
-+2 thru 17</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
+      <td>Rory McIlroy(W) -4
+-5 thru 10</td>
+      <td>Dustin Johnson +2
++1 thru 11</td>
+      <td>Viktor Hovland +4
++1 thru 12</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -812,6 +796,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">9</td>
+      <td>Shane Lowry -1
++1 thru 7</td>
+      <td>Dustin Johnson(W) +2
++1 thru 11</td>
+      <td>Matthew Fitzpatrick +2
+-2 (F)</td>
+      <td>Tony Finau +6
++2 thru 17</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">10</td>
       <td>Justin Thomas -3
@@ -825,22 +825,6 @@ E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">12</td>
-      <td>Scottie Scheffler -10
--1 thru 5</td>
-      <td>Dustin Johnson -1
--2 thru 10</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td>Adam Scott +14
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -892,19 +876,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Dustin Johnson -1
--2 thru 10</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td>Jon Rahm +4
--3 (F)</td>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">15</td>
+      <td>Scottie Scheffler -10
+-1 thru 6</td>
+      <td>Dustin Johnson +2
++1 thru 11</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W)
+      <td>Adam Scott +14
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
-      <td class="greyout">Brooks Koepka
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -921,6 +905,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">19</td>
+      <td>Dustin Johnson +2
++1 thru 11</td>
+      <td>Viktor Hovland +4
++1 thru 12</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W)
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
