--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:09:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:09:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Justin Thomas(W) -3
 -2 thru 7</td>
       <td>Shane Lowry -1
@@ -191,7 +191,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -10
--1 thru 5</td>
+-1 thru 6</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
       <td>Will Zalatoris E
@@ -268,22 +268,6 @@ Missed Cut</td>
 +8 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
-      <td>Justin Thomas -3
--2 thru 7</td>
-      <td>Corey Conners -2
--1 thru 8</td>
-      <td>Dustin Johnson -1
--2 thru 10</td>
-      <td>Russell Henley +5
--2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele(W)
-Missed Cut</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">2</td>
       <td>Justin Thomas(W) -3
@@ -297,6 +281,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Daniel Berger +15
 +8 (F)</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -3
+-2 thru 7</td>
+      <td>Corey Conners -2
+-1 thru 8</td>
+      <td>Dustin Johnson +2
++1 thru 11</td>
+      <td>Russell Henley +5
+-2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele(W)
+Missed Cut</td>
+      <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">16</td>
-      <td>Dustin Johnson -1
--2 thru 10</td>
+      <td class="bigbold">19</td>
+      <td>Dustin Johnson +2
++1 thru 11</td>
       <td>Viktor Hovland +4
 +1 thru 12</td>
       <td>Jon Rahm +4
