--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:14:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:15:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,9 +198,25 @@ E thru 6</td>
 -1 thru 9</td>
       <td>Will Zalatoris E
 -2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -10
+-1 thru 6</td>
+      <td>Cameron Smith -6
+E thru 6</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
+      <td class="greyout leftborder">Tyrrell Hatton +17
++8 (F)</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -236,6 +252,22 @@ Missed Cut</td>
 -1 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -10
+-1 thru 6</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
@@ -252,48 +284,16 @@ Missed Cut</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -10
--1 thru 6</td>
-      <td>Cameron Smith -6
-E thru 6</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Viktor Hovland(W) +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Tyrrell Hatton +17
-+8 (F)</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -10
--1 thru 6</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
 -1 thru 6</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -380,6 +380,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -6
+E thru 6</td>
+      <td>Justin Thomas -3
+-2 thru 8</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-8</td>
       <td>Rory McIlroy -4
@@ -390,8 +406,8 @@ Missed Cut</td>
 -2 thru 10</td>
       <td>Will Zalatoris E
 -2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
       <td class="greyout">Tiger Woods(W) +13
 +6 (F)</td>
     </tr>
@@ -412,19 +428,35 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -6
-E thru 6</td>
-      <td>Justin Thomas -3
--2 thru 8</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele
+      <td>Scottie Scheffler -10
+-1 thru 6</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+E thru 6</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Shane Lowry -1
++1 thru 7</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -468,43 +500,59 @@ E thru 6</td>
 -1 thru 9</td>
       <td>Shane Lowry -1
 +1 thru 7</td>
-      <td>Hideki Matsuyama +3
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Hideki Matsuyama +3
 +1 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 12</td>
       <td class="greyout">Jon Rahm +4
 -3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -6
+E thru 6</td>
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -10
 -1 thru 6</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Jon Rahm(W) +4
+      <td>Corey Conners -2
+-1 thru 9</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td>Jon Rahm +4
 -3 (F)</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout leftborder">Patrick Cantlay(W) +7
+-1 (F)</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -6
-E thru 6</td>
-      <td>Justin Thomas(W) -3
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-5</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Justin Thomas -3
 -2 thru 8</td>
-      <td>Shane Lowry -1
-+1 thru 7</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Collin Morikawa(W) -1
+-2 thru 10</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -518,8 +566,8 @@ Missed Cut</td>
 -2 thru 10</td>
       <td>Will Zalatoris E
 -2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -540,22 +588,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -6
-E thru 6</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -6
@@ -572,38 +604,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -10
--1 thru 6</td>
-      <td>Corey Conners -2
--1 thru 9</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay(W) +7
--1 (F)</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-4</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Justin Thomas -3
--2 thru 8</td>
-      <td>Collin Morikawa(W) -1
--2 thru 10</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -10
@@ -617,6 +617,22 @@ E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -6
+E thru 6</td>
+      <td>Rory McIlroy -4
+-5 thru 10</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Bubba Watson +7
+-1 (F)</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -652,18 +668,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-E thru 6</td>
-      <td>Rory McIlroy -4
--5 thru 10</td>
-      <td>Jon Rahm(W) +4
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Will Zalatoris E
+-2 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td>Jon Rahm +4
 -3 (F)</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Bubba Watson +7
--1 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -684,6 +700,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">4</td>
+      <td>Justin Thomas -3
+-2 thru 8</td>
+      <td>Will Zalatoris E
+-2 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">4</td>
       <td>Rory McIlroy -4
@@ -700,46 +732,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas -3
--2 thru 8</td>
-      <td>Will Zalatoris E
--2 thru 12</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Rory McIlroy(W) -4
 -5 thru 10</td>
       <td>Dustin Johnson +2
 +1 thru 11</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -749,13 +749,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
       <td>Will Zalatoris E
 -2 thru 12</td>
-      <td>Viktor Hovland(W) +4
-+1 thru 12</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -765,13 +765,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners -2
 -1 thru 9</td>
       <td>Shane Lowry(W) -1
 +1 thru 7</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
       <td>Joaquin Niemann +6
 +2 (F)</td>
       <td class="greyout leftborder">Sam Burns
@@ -812,6 +812,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) -3
+-2 thru 8</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">11</td>
       <td>Justin Thomas -3
@@ -828,19 +844,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">12</td>
-      <td>Justin Thomas(W) -3
--2 thru 8</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Collin Morikawa -1
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
-      <td class="greyout">Xander Schauffele
+      <td>Patrick Reed +6
++2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -856,22 +872,6 @@ Missed Cut</td>
 -1 (F)</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">13</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Viktor Hovland(W) +4
-+1 thru 12</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td>Patrick Reed +6
-+2 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -909,11 +909,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +2
 +1 thru 11</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
@@ -927,8 +927,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Tony Muir</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Justin Thomas</td>
-      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
@@ -1005,8 +1005,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Chris Bryson</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Viktor Hovland</td>
+      <td class="greyout">Jon Rahm(W)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Xander Schauffele
