--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:14:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 4:15:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ E thru 6</td>
 -2 thru 8</td>
       <td>Tommy Fleetwood(W) +1
 E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+1 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 13</td>
       <td class="greyout">Joaquin Niemann +6
 +2 (F)</td>
     </tr>
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -6
 E thru 6</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
       <td>Corey Conners -2
 -1 thru 9</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Sungjae Im -4
 E thru 7</td>
       <td>Justin Thomas -3
 -2 thru 8</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
-      <td>Viktor Hovland(W) +4
-+1 thru 12</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -317,11 +317,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">12</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
-      <td>Viktor Hovland(W) +4
-+1 thru 12</td>
+      <td>Viktor Hovland(W) +3
+E thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +6
@@ -349,11 +349,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">19</td>
+      <td class="bigbold">18</td>
       <td>Dustin Johnson +2
 +1 thru 11</td>
-      <td>Viktor Hovland +4
-+1 thru 12</td>
+      <td>Viktor Hovland +3
+E thru 13</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
